--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: Git push
           command: |
-            cd ~/.ssh
+            cd ~/.ssh/config
             pwd
             ls -a
 workflows:
