--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,7 @@ jobs:
       - run:
           name: Git push
           command: |
-            cd ~/.ssh
-            cat config
+            git push -u https://github.com/mikededecker/private-repo.git push
 workflows:
   version: 2
   default_check:
