--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,9 +1,13 @@
 name: Build
 on: [push]
 jobs:
-  phpunit:
+  sync:
     runs-on: ubuntu-latest
     name: Php unit test
     steps:
-      - name: Echo Hello world
-        run: echo ${{ secrets.HELLO_WORLD }}
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Add remote
+        run: |
+          pwd
+          ls -a
