--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Add remote
         run: git remote add upstream git:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
       - name: Push to master
-        run: git push upstream push
+        run: git push upstream HEAD:push
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
         run: git push upstream --tags
