--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,15 +8,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
       - name: Add remote
-        run: git remote add upstream git:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
+        run: git remote add upstream https://git:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
       - name: Push to master
         run: git push upstream HEAD:push
-        env:
-          CI: true
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
         run: git push upstream --tags
-        env:
-          CI: true
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
