--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -11,6 +11,12 @@ jobs:
         run: git remote add upstream https://git:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
       - name: Push to master
         run: git push upstream HEAD:push
+        env:
+          CI: true
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
         run: git push upstream --tags
+        env:
+          CI: true
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
