--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,20 +3,21 @@ on: [push]
 jobs:
   sync:
     runs-on: ubuntu-latest
-    name: Php unit test
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - name: Add remote
-        run: git remote add upstream https://mikededecker:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
-      - name: Push to master
-        run: git push upstream HEAD:push
+      - name: Git push
+        run: |
+          git remote add upstream https://mikededecker:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
+          git push upstream HEAD:push
         env:
           CI: true
           GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
-        run: git push upstream --tags
+        run: |
+          git remote add upstream https://mikededecker:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
+          git push upstream --tags
         env:
           CI: true
           GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
