--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -6,13 +6,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - name: Git push
-        run: |
-          git remote add upstream https://mikededecker:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ secrets.PUSH_REPO }}
-          git push upstream HEAD:push
+      - name: Configure SSH keys
         env:
-          CI: true
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+          SSH_PRIVATE_KEY: ${{ SSH_SECRET_KEY }}
+          REPO: ${{ secrets.REPO }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh_host=$(echo $REPO | sed 's/.*@//' | sed 's/[:/].*//')
+          ssh-keyscan -H 22 "$ssh_host" >> ~/.ssh/known_hosts
+      - name: Git push
+        env:
+          REPO: ${{ secrets.REPO }}
+        run: git push $REPO HEAD:push
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
         run: |
