--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Configure SSH keys
         env:
-          SSH_PRIVATE_KEY: ${{ SSH_SECRET_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_SECRET_KEY }}
           REPO: ${{ secrets.REPO }}
         run: |
           mkdir -p ~/.ssh
