--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -22,7 +22,9 @@ jobs:
       - name: Git push
         env:
           REPO: ${{ secrets.REPO }}
-        run: git push $REPO HEAD:push
+        run: |
+          git remote add upstream $REPO
+          git push upstream HEAD:push
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
         run: |
