--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -19,6 +19,10 @@ jobs:
           ssh-keyscan -H 22 "$ssh_host" >> ~/.ssh/known_hosts
       - name: Checkout code
         uses: actions/checkout@v1
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "noreply@github.com"
       - name: Git push
         env:
           REPO: ${{ secrets.REPO }}
