--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -19,17 +19,12 @@ jobs:
           ssh_host=$(echo $REPO | sed 's/.*@//' | sed 's/[:/].*//')
           ssh-keyscan -H 22 "$ssh_host" >> ~/.ssh/known_hosts
       - name: Checkout code
-        uses: actions/checkout@v1
-      - name: Configure Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "noreply@github.com"
+        uses: actions/checkout@master
       - name: Git push
         env:
           REPO: ${{ secrets.REPO }}
         run: |
-          git remote add upstream $REPO
-          git push upstream HEAD:push
+          git push $REPO HEAD:push
       - name: push tags
         if: startsWith(github.ref, 'refs/tags/')
         run: |
