--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           REPO: ${{ secrets.REPO }}
         run: |
-          git push $REPO HEAD:push
+          git push $REPO HEAD:master
       - name: Git push tags
         if: startsWith(github.ref, 'refs/tags/')
         env:
